# coreutils

./: .gitignore  CMakeLists.txt  README.md  coreutils.h  false.c  hostid.c  logname.c  sync.c  true.c  whoami.c  yes.c
